# pedagoialast

./: .env  .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.cursor/: mcp.json
app/: globals.css
public/: _redirects  full-sitemap.xml  main-sitemap.xml  r-track.html  robots.txt  site.webmanifest  sitemap.xml
python-chatbot-streamlit/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
python-chatbot-streamlit/app/: main.py
src/: App.css  App.tsx  index.css  main.tsx  routes.tsx  theme.ts  vite-env.d.ts
src/api/: exercise.ts  lesson-plan.ts
src/app/: layout.tsx  page.tsx
src/components/: ActionButtons.tsx  AppSidebar.tsx  BlogPost.tsx  ChatHistory.tsx  ChatInput.tsx  CookieBanner.tsx  ErrorBoundary.tsx  LessonPlanCreator.tsx  MissingSubscriptionCard.tsx  QuickActions.tsx  SEO.tsx  WelcomeBanner.tsx  date-range-picker.tsx  main-content.tsx  sidebar.tsx
src/data/: actions.ts  educationData.ts  suggestions.ts
src/hooks/: index.ts  use-auth-form.ts  use-brevo.ts  use-email.ts  use-mailerlite.ts  use-mobile.tsx  use-sidebar.tsx  use-toast.ts  useAnalytics.ts  useAuth.tsx  useAuthMiddleware.ts  useBugReport.ts  useChat.ts  useCheckoutSession.ts  useConversationManagement.ts  useExerciseGeneration.ts  useForgotPasswordForm.ts  useImageGeneration.ts  useLessonPlanGeneration.ts  useMarketingAccess.ts  useMessageManagement.ts  useOnboarding.ts  usePasswordResetForm.ts  useRateLimit.ts  useSavedContent.ts  useSavedContentManagement.ts  useToolMetrics.ts  (+4 more)
supabase/: config.toml
(+645 files in other folders)
