[tool.poetry]
name = "python-chatbot-streamlit"
version = "0.1.0"
description = "A Streamlit chatbot with Exa search and Mistral AI integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"
mistralai = "^0.0.10"
exa-py = "^1.0.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"